--- a/python-basics/01 - Python built-in Data Structures, Functions, Managing Files.ipynb
+++ b/python-basics/01 - Python built-in Data Structures, Functions, Managing Files.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "4e20411f",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Python-built-in-Data-Structures,-Functions,-Managing-Files\" data-toc-modified-id=\"Python-built-in-Data-Structures,-Functions,-Managing-Files-1\">Python built-in Data Structures, Functions, Managing Files</a></span><ul class=\"toc-item\"><li><span><a href=\"#Data-Structures\" data-toc-modified-id=\"Data-Structures-1.1\">Data Structures</a></span><ul class=\"toc-item\"><li><span><a href=\"#Tuple\" data-toc-modified-id=\"Tuple-1.1.1\">Tuple</a></span><ul class=\"toc-item\"><li><span><a href=\"#Unpack-Tuple\" data-toc-modified-id=\"Unpack-Tuple-1.1.1.1\">Unpack Tuple</a></span></li><li><span><a href=\"#Tuple-Methods\" data-toc-modified-id=\"Tuple-Methods-1.1.1.2\">Tuple Methods</a></span></li></ul></li><li><span><a href=\"#List\" data-toc-modified-id=\"List-1.1.2\">List</a></span></li></ul></li></ul></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5f31b287",
    "metadata": {},
    "source": [
@@ -13,7 +24,7 @@
    "id": "600227d4",
    "metadata": {},
    "source": [
-    "[raw] In this notebook we are going after different kinds of built-in data structures (not the one you typically you use when working with libraries like numpy, pandas, and etc."
+    "In this notebook we are going after different kinds of built-in data structures (not the one you typically use when working with libraries like numpy, pandas, and etc."
    ]
   },
   {
@@ -360,7 +371,7 @@
    "id": "1b590621",
    "metadata": {},
    "source": [
-    "#### unpack a tuple "
+    "#### Unpack Tuple "
    ]
   },
   {
@@ -635,7 +646,7 @@
    "id": "5f27c1d7",
    "metadata": {},
    "source": [
-    "#### Useful tuple methods"
+    "#### Tuple Methods"
    ]
   },
   {
@@ -767,7 +778,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -782,6 +793,27 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {
+    "height": "289px",
+    "width": "523px"
+   },
+   "number_sections": false,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "250.825px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
   },
   "vscode": {
    "interpreter": {
